Commit 8 Added user Test cases

--- a/App2/templates/App2/users.html
+++ b/App2/templates/App2/users.html
@@ -37,7 +37,7 @@
 
                         </div>
                         <div class="card-footer text-muted">
-                            <a href="/edituser" class="btn btn-outline-secondary">Edit User Details</a>
+                            <a href="/updateuser/{{ user.id }}" class="btn btn-outline-secondary">Edit User Details</a>
                         </div>
                     </div>
 
