Commit 10 Added Search Bars to Events, Reports, venues and users.

--- a/App2/templates/App2/reports.html
+++ b/App2/templates/App2/reports.html
@@ -11,6 +11,13 @@
 
 {% if user.is_authenticated %}
 <h1 id="header">Reports Archive</h1>
+<form class="form-inline my-2 my-lg-0" method=POST action="searchreport">
+
+    {% csrf_token %}
+
+    <input class="form-control mr-sm-2" type="search" placeholder="Search Reports" aria-label="Search" name="query3">
+    <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+</form>
 
     <br/><br/>
 
