--- a/App2/templates/App2/events.html
+++ b/App2/templates/App2/events.html
@@ -22,6 +22,14 @@
 
             <h1 id="header">Events</h1>
 
+            <form class="form-inline my-2 my-lg-0" method=POST action="searchevent">
+
+                {% csrf_token %}
+
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Events" aria-label="Search" name="query1">
+                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+
             <br/><br>
 
                 {% for event in event1 %}
