--- a/App2/templates/App2/users.html
+++ b/App2/templates/App2/users.html
@@ -15,6 +15,13 @@
         {% if user.is_superuser %}
 
             <h1 id="header">Club Users</h1>
+            <form class="form-inline my-2 my-lg-0" method=POST action="searchuser">
+
+                {% csrf_token %}
+
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Users" aria-label="Search" name="query">
+                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
 
                 <br/><br/>
 
